<resources>
    <string name="app_name">真命天喵</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">秀宠</string>
    <string name="title_notifications">消息</string>
    <string name="title_user">我的</string>
    <string name="welcome_text">欢迎使用真命天喵！我们将通过《用户协议》和《隐私政策》帮助您了解我们为您提供的服务，我们将如何处理个人信息以及您享有的权利。我们将会严格按照相关法律法规要求，采取各种安全措施来保护您的个人信息。\n点击"同意"按钮，表示您已知情并同意以下协议和以下约定：\n1.为了保障软件的安全运行和账号安全，我们会申请收集您的设备信息。\n2.上传图片需要申请您的相册或存储权限。\n3.申请设备信息，方便为您推荐个性化广告。\n4.我们尊重您的选择权，您可以访问修改，删除您的个人信息并管理您的授权。</string>
    <string name="welcome_title">个人隐私保护提示</string>
    <string name="welcome_agree">同意并继续</string>
    <string name="welcome_disagree">不同意</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="error_occurred">Error occurred</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="no_data">暂无数据</string>
    <string name="copy_success">复制成功</string>
    <string name="copy_success_copy">已复制到粘贴板</string>

    <string name="login_new_register">新用户注册</string>
    <string name="login_phone_placeholder">请输入手机号</string>
    <string name="login_email_placeholder">请输入邮箱</string>
    <string name="login_password_placeholder">请输入密码</string>
    <string name="login_action">登录</string>
    <string name="register_action">注册</string>
    <string name="login_find_password">找回密码</string>
    <string name="login_protocol">请阅读并同意用户协议和隐私政策</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="login_check_phone">校验手机号</string>
    <string name="login_get_code">获取验证码</string>
    <string name="register_input_password">请输入6位或6位以上密码</string>
    <string name="register_input_code">请输入验证码</string>
    <string name="login_input_password">请输6位或6位以上新密码</string>
    <string name="login_input_password_again">请再次输入新密码</string>
    <string name="uploadPasswordSucc">更新密码成功</string>
    <string name="uploadPasswordFail">更新密码失败</string>
    <string name="check_code_fail">验证码有误</string>
    <string name="code_send_error">验证码发送失败，请重试</string>
    <string name="login_unbind">未绑定手机号</string>
    <string name="login_uncheck">未校验手机号</string>
    <string name="login_token_lose">登录失效，请重新登录</string>
    <string name="logout">退出登录</string>
    <string name="logout_remind">确定退出登录吗？</string>
    <string name="login_bind_phone">绑定手机号</string>
    <string name="login_read_agree">阅读并同意</string>

    <string name="read_all">全文</string>
    <string name="read_close">收起</string>
    <string name="content_open">展开</string>
    <string name="content_close">收起</string>
    <string name="like_action">点赞</string>
    <string name="collection_action">收藏</string>
    <string name="comment_action">评论</string>
    <string name="click_get_contact">点击获取联系方式</string>
    <string name="no_more_data">已经到底啦</string>
    <string name="like_error">点赞失败</string>
    <string name="collect_error">收藏失败</string>
    <string name="network_request_error">网络请求失败</string>
    <string name="get_contact_error">获取联系方式失败</string>
    <string name="unable_get_contact">该账号无法获取联系方式</string>
    <string name="search_placeholder">请输入关键字</string>
    <string name="home_like">点赞</string>
    <string name="home_collection">收藏</string>
    <string name="home_common">评论</string>
    <string name="topic_delete_title">确定删除吗？</string>
    <string name="topic_delete_content">帖子删除后，您的发帖记录、浏览记录、该帖子的评论、回复、帖子的收藏等数据将会全面删除，确定删除该帖子吗？</string>

    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="confirm_d">确定</string>
    <string name="search">搜索</string>
    <string name="search_hot">热门搜索</string>
    <string name="re_local">重新定位</string>
    <string name="local_name">当前位置：%s</string>
    <string name="find_title">找宠小助手</string>
    <string name="find_go">去找宠</string>
    <string name="find_want">想领养</string>
    <string name="find_contact">获取TA的联系方式</string>
    <string name="find_remind">没有找到想要的宠物?\n可以提交相关信息给小助手~\n有合适的宠物后会通知您</string>
    <string name="delete_success">删除成功</string>

    <string name="release_hint">请简单介绍下宠物，例如：\n名字：xxx\n年龄：xxx\n性别：xxx\n品种：xxx\n健康信息：xxx
    \n领养要求：xxx</string>
    <string name="release_contact">请输入联系方式,例如：手机号：xxx或者微信号：xxx</string>
    <string name="release_address">请选择地区</string>
    <string name="release_remind">禁止出现商业广告、低俗、色情、暴力、具有侮辱性词汇或者与宠物无关等内容，违规者帖子会被删除!</string>
    <string name="release_add_tag">添加标签 ></string>
    <string name="release_chose_tag">选择标签</string>
    <string name="release_upload">上传图片</string>
    <string name="release_push">发布</string>
    <string name="release_context_desc">请输入宠物简介</string>
    <string name="release_photos_desc">请选择宠物图片</string>
    <string name="release_contact_desc">请输入联系方式</string>
    <string name="release_address_desc">请选择地区</string>
    <string name="release_success">发布成功</string>
    <string name="release_fail">发布失败</string>
    <string name="release_image_fail">图片上传失败</string>
    <string name="release_topic_limit">0/1000</string>
    <string name="release_dialog">请详细阅读《用户协议》，特别是用户权利和义务部分，发布内容时请严格遵守用户协议。
禁止出现商业广告、低俗、色情、暴力、具有侮辱性语音或与宠物无关等内容，违规者帖子会被删除。</string>
    <string name="release_confirm_push">确定发布</string>
    <string name="release_push_remind">发布提示</string>

    <string name="message_system">系统消息</string>
    <string name="message_title">公告</string>

    <string name="drawer_footer">浏览记录</string>
    <string name="drawer_collect">我的收藏</string>
    <string name="drawer_black">黑名单</string>
    <string name="drawer_rescue">领养相关</string>
    <string name="drawer_upload">检测更新</string>
    <string name="drawer_agreement">用户协议</string>
    <string name="drawer_privacy">隐私协议</string>
    <string name="drawer_about">关于我们</string>
    <string name="drawer_help">支持我们</string>
    <string name="drawer_recommend">推荐给朋友</string>
    <string name="drawer_adopt">"领养相关"</string>
    <string name="drawer_guideline">宠物领养防骗指南</string>
    <string name="drawer_description">领养说明</string>
    <string name="drawer_protocol">领养协议</string>

    <string name="show_release_add">添加话题 ></string>
    <string name="show_topic_desc">宠物睡姿</string>
    <string name="show_input_desc">请输入简要说明</string>
    <string name="show_image_desc">请上传图片</string>
    <string name="show_release_limit">0/200</string>
    <string name="show_upload_error">图片上传发生错误</string>
    <string name="show_add_comment">添加评论...</string>

    <string name="comment_placeholder">请输入评论</string>
    <string name="comment_send">发布</string>
    <string name="comment_reply">回复</string>
    <string name="comment_fail">评论失败</string>

    <string name="user_login">登录/注册</string>
    <string name="user_edit">编辑个人信息</string>
    <string name="user_setting">设置</string>
    <string name="user_nickname">昵称</string>
    <string name="user_edit_nickname">请输入昵称</string>
    <string name="user_edit_image">点击修改头像</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="user_change_password">修改密码</string>
    <string name="user_suggestion">意见反馈</string>
    <string name="user_black">黑名单</string>
    <string name="user_account">账号安全</string>
    <string name="user_suggestion_title">请输入您意见或建议</string>
    <string name="user_suggestion_desc">您的意见对我们非常重要</string>
    <string name="user_suggestion_phone">请输入您的联系方式</string>
    <string name="user_phone_input">请输入联系方式</string>
    <string name="user_push">提交</string>
    <string name="push_success">提交成功</string>
    <string name="push_fail">提交失败，请重试</string>
    <string name="user_origin_password">请输入原密码</string>
    <string name="user_new_password">请输入新密码（不少于6位）</string>
    <string name="user_confirm_password">请确认新密码</string>
    <string name="user_confirm_error">确认密码与新密码不一致</string>
    <string name="user_password_equal">新密码与原密码相同</string>
    <string name="change_password_success">密码修改成功</string>
    <string name="change_password_fail">密码修改失败</string>
    <string name="remind_desc">提示</string>
    <string name="confirm">确认</string>
    <string name="user_account_logout">账号注销后无法恢复，确认注销吗?</string>
    <string name="user_logout_success">注销成功</string>
    <string name="user_logout_fail">注销失败</string>
    <string name="user_collection">我的收藏</string>
    <string name="user_report">举报</string>
    <string name="user_input">请输入</string>
    <string name="user_rescue">领养人</string>
    <string name="user_sender">送养人</string>
    <string name="user_complete_rescue">点击完成领养，即代表宠物已经被领养，他人无法获取你的联系方式，确定改成完成领养吗？</string>
    <string name="user_un_complete">点击未完成领养，即代表宠物未被领养，他人可以获取你的联系方式，确定改成未完成领养吗？</string>
    <string name="user_complete_title">完成领养</string>
    <string name="user_un_complete_title">未完成领养</string>
    <string name="user_completion">已完成领养</string>

    <string name="black_phone">手机号</string>
    <string name="black_phone_placeholder">请输入失信人手机号</string>
    <string name="black_wx">微信号</string>
    <string name="black_wx_placeholder">请输入失信人微信号</string>
    <string name="black_wx_nickname">微信昵称</string>
    <string name="black_nickname_placeholder">请输入失信人微信昵称</string>
    <string name="black_id">身份</string>
    <string name="black_id_placeholder">请选择失信人身份</string>
    <string name="black_reason">举报理由</string>
    <string name="black_reason_placeholder">请输入举报理由</string>
    <string name="black_evidence">举报证据</string>
    <string name="black_evidence_placeholder">请上传证据图片</string>

    <string name="more_black">屏蔽/拉黑</string>
    <string name="more_report">投诉举报</string>
    <string name="more_remind">请选择对应的理由，理由与内容不符，会延迟处理</string>
    <string name="more_privacy">了解用户协议</string>
    <string name="more_select_remind">请选择举报类型</string>
    <string name="more_black_desc">确定屏蔽该条信息吗？</string>

    <string name="photo_permission_error">获取相册权限失败</string>
    <string name="photo_permission_never">相册权限被永久拒绝授权，请手动授予相册权限</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>