<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.activity.UserInfoEditActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/head_img"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:riv_corner_radius="45dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/icon_eee"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/edit_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/head_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/user_edit_image"
        android:textColor="@color/color_desc"
        android:textSize="@dimen/desc_font"
        android:gravity="center"
        />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_eee"
        app:layout_constraintTop_toBottomOf="@id/edit_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <TextView
            android:text="@string/user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:textSize="@dimen/content_font"
            android:textColor="@color/color_title"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="@string/login_phone_placeholder"
            android:hint="@string/user_edit_nickname"
            android:inputType="phone"
            android:selectAllOnFocus="true"
            android:background="@null"
            android:layout_marginEnd="10dp"
            android:theme="@style/EditTextStyle"
            android:textSize="@dimen/content_font"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>