<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ReleaseTopicActivity"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/tag_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tags_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/add_tags"
            android:text="@string/release_add_tag"
            android:textColor="@color/color_system"
            android:textSize="@dimen/content_font"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >
        <EditText
            android:id="@+id/content_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/release_hint"
            android:hint="@string/release_hint"
            android:textSize="@dimen/content_font"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:background="@null"
            android:layout_gravity="top|start"
            android:maxLines="@null"
            android:gravity="top"/>

        <TextView
            android:id="@+id/number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="0/1000"
            android:textSize="@dimen/address_font"
            android:textColor="@color/color_desc"
            />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/images_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

    <FrameLayout
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext_background"
        >
        <EditText
            android:id="@+id/contact_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="@string/release_contact"
            android:hint="@string/release_contact"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:background="@null"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:theme="@style/EditTextStyle"
            android:textSize="@dimen/content_font"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext_background"
    >

        <EditText
            android:id="@+id/address_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="@string/release_address"
            android:hint="@string/release_address"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:background="@null"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:theme="@style/EditTextStyle"
            android:textSize="@dimen/content_font"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/release_remind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/release_remind"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

</LinearLayout>