<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:icon="@drawable/icon_a_back"
        app:iconTint="@null"
        android:insetLeft="0dp"
        />


    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/app_name"
        android:textColor="@color/color_system"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        />

    <LinearLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/phone_layout_inset"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/login_phone_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_login_phone"
                android:contentDescription="@null" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="@string/login_phone_placeholder"
                android:hint="@string/login_phone_placeholder"
                android:inputType="phone"
                android:selectAllOnFocus="true"
                android:background="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/login_phone_img"
                android:layout_marginStart="10dp"
                android:theme="@style/EditTextStyle"
                android:textSize="@dimen/content_font"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_eee"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_layout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/login_pswd_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_login_pswd"
                android:contentDescription="@null" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:autofillHints="@string/login_password_placeholder"
                android:background="@null"
                android:hint="@string/login_password_placeholder"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textSize="@dimen/content_font"
                android:theme="@style/EditTextStyle"
                app:layout_constraintEnd_toStartOf="@id/show_password"
                app:layout_constraintStart_toEndOf="@id/login_pswd_img" />

            <FrameLayout
                android:id="@+id/password_end_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageButton
                    android:id="@+id/show_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_eye_o"
                    android:contentDescription="@null"
                    android:background="@android:color/transparent"
                    android:padding="15dp"
                    android:layout_gravity="end"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/get_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/login_get_code"
                    android:textSize="@dimen/desc_font"
                    android:textColor="@color/color_desc"
                    app:cornerRadius="5dp"
                    app:strokeColor="@color/color_eee"
                    app:strokeWidth="1dp"/>
            </FrameLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_eee"
            android:layout_marginTop="2dp"/>

    </LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/login_action"
        android:textColor="@color/white"
        android:textSize="@dimen/address_font"
        android:backgroundTint="@color/color_system"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_pswd"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/find_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="0dp"
        android:gravity="start"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/layout_pswd"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:textSize="@dimen/address_font"
        android:text="@string/login_find_password"
        android:textColor="@color/color_system"
        />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetRight="0dp"
        android:gravity="end"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="@id/layout_pswd"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:textSize="@dimen/address_font"
        android:text="@string/login_new_register"
        android:textColor="@color/color_system"
        />

    <LinearLayout
        android:id="@+id/agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/find_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        >

        <ImageButton
            android:id="@+id/agreement_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_lo_unse"
            android:contentDescription="@null"
            android:background="#00000000"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            /> <!-- 透明背景 -->

        <TextView
            android:id="@+id/protocol_lab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_protocol"
            android:textSize="@dimen/desc_font"
            android:textAlignment="textStart"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>